deployment/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/paulombcosta/twitbooks/api:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: .8
              memory: "1.5Gi"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: gitlab-registry
