deployment/api-service.yml
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
