deployment/ner-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ner-service
spec:
  selector:
    app: ner
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
