deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/cluster-issuer: twitbooks-prod
spec:
  rules:
    - host: api.twitbooks.io
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 80
  tls:
    - hosts:
        - "api.twitbooks.io"
      secretName: twitbooks-prod
